Avances en el header de home

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -5,8 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <link href="css/styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/fd4aeec64b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header>
+        <div id="burger-menu"><i class="icon fas fa-bars"></i></div>
+        <a href="/home" ><img src="/images/logo.png" alt="Logo" id="brand-logo"></a>
+        <ul id="header-nav">
+            <li>Home | </li>
+            <li>News | </li>
+            <li>Contact | </li>
+            <li>About</li>
+        </ul>
+        <div>
+            <a href="/"><img src="/images/circle-user-solid.svg" id="header-button"></a>
+            <a href="/"><img src="/images/cart-shopping-solid.svg" id="header-button"></a>
+        </div>
+    </header>
+    <main>
+        <div class="banner-div">
+            <div class="banner">
+                <h1>Banner</h1>
+            </div>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
