Avances en home

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <header>
-        <div id="burger-menu"><i class="icon fas fa-bars"></i></div>
+        <div class="display-flex">
+            <div id="burger-menu"><i class="icon fas fa-bars fa-xl" ></i></div>
+            <div id="invisible"><i class="icon fas fa-bars fa-lg" ></i></div>
+        </div>
         <a href="/home" ><img src="/images/logo.png" alt="Logo" id="brand-logo"></a>
         <ul id="header-nav">
             <li>Home | </li>
@@ -19,16 +22,33 @@
             <li>About</li>
         </ul>
         <div>
-            <a href="/"><img src="/images/circle-user-solid.svg" id="header-button"></a>
-            <a href="/"><img src="/images/cart-shopping-solid.svg" id="header-button"></a>
+            <a href="/login"><img src="/images/circle-user-solid.svg" id="header-button"></a>
+            <a href="/carrito"><img src="/images/cart-shopping-solid.svg" id="header-button"></a>
         </div>
     </header>
     <main>
-        <div class="banner-div">
-            <div class="banner">
+        <div class="banner">
+            <div class="banner-content">
                 <h1>Banner</h1>
             </div>
         </div>
+        <section>
+            <h1>Title</h1>
+            <div class="articles">
+                <article>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis veritatis repudiandae vitae ratione nam esse quidem labore impedit perspiciatis tenetur, sunt, molestias voluptatibus, dolorum eius vero repellendus alias at aspernatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, facere eveniet. Iure reprehenderit impedit nemo commodi. Accusantium quas commodi minus blanditiis maxime, est cumque dignissimos sequi vitae perspiciatis nemo? Blanditiis!</p>
+                </article>
+                <article>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis veritatis repudiandae vitae ratione nam esse quidem labore impedit perspiciatis tenetur, sunt, molestias voluptatibus, dolorum eius vero repellendus alias at aspernatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, facere eveniet. Iure reprehenderit impedit nemo commodi. Accusantium quas commodi minus blanditiis maxime, est cumque dignissimos sequi vitae perspiciatis nemo? Blanditiis!</p>
+                </article>
+                <article>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis veritatis repudiandae vitae ratione nam esse quidem labore impedit perspiciatis tenetur, sunt, molestias voluptatibus, dolorum eius vero repellendus alias at aspernatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, facere eveniet. Iure reprehenderit impedit nemo commodi. Accusantium quas commodi minus blanditiis maxime, est cumque dignissimos sequi vitae perspiciatis nemo? Blanditiis!</p>
+                </article>
+                <article>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis veritatis repudiandae vitae ratione nam esse quidem labore impedit perspiciatis tenetur, sunt, molestias voluptatibus, dolorum eius vero repellendus alias at aspernatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, facere eveniet. Iure reprehenderit impedit nemo commodi. Accusantium quas commodi minus blanditiis maxime, est cumque dignissimos sequi vitae perspiciatis nemo? Blanditiis!</p>
+                </article>
+            </div>
+        </section>
     </main>
     <footer>
 
