--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,23 +9,46 @@
     <link href="css/styles.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/fd4aeec64b.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header>
-        <div class="display-flex">
-            <div id="burger-menu"><i class="icon fas fa-bars fa-xl" ></i></div>
-            <div id="invisible"><i class="icon fas fa-bars fa-lg" ></i></div>
-        </div>
-        <a href="/home" ><img src="/images/logo.png" alt="Logo" id="brand-logo"></a>
-        <ul id="header-nav">
-            <li>Home | </li>
-            <li>News | </li>
-            <li>Contact | </li>
-            <li>About</li>
-        </ul>
-        <div>
-            <a href="/login"><img src="/images/circle-user-solid.svg" id="header-button"></a>
-            <a href="/carrito"><img src="/images/cart-shopping-solid.svg" id="header-button"></a>
-        </div>
+        <nav class="navbar">
+            <div class="navbar-toggler">
+                <i class="icon fas fa-bars fa-xl"></i>
+            </div>
+            <div class="brand">
+                <a href="/">
+                    <img src="/images/logo.jpeg" alt="Logo" id="brand-logo">
+                </a>
+            </div>
+            <div class="items">
+                <ul>
+                    <li>
+                        <a href="/#">Categorias</a>
+                    </li>
+                    <li>
+                        <a href="/#">Nuevo</a>
+                    </li>
+                    <li>
+                        <a href="/#">Ofertas</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="user">
+                <ul>
+                    <li>
+                        <a href="/login">
+                            <i class="fa-solid fa-circle-user"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/cart">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
     <main>
         <div class="banner">
@@ -36,16 +60,36 @@
             <h1>Title</h1>
             <div class="articles">
                 <article>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis veritatis repudiandae vitae ratione nam esse quidem labore impedit perspiciatis tenetur, sunt, molestias voluptatibus, dolorum eius vero repellendus alias at aspernatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, facere eveniet. Iure reprehenderit impedit nemo commodi. Accusantium quas commodi minus blanditiis maxime, est cumque dignissimos sequi vitae perspiciatis nemo? Blanditiis!</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis veritatis repudiandae vitae
+                        ratione nam esse quidem labore impedit perspiciatis tenetur, sunt, molestias voluptatibus,
+                        dolorum eius vero repellendus alias at aspernatur! Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Suscipit, facere eveniet. Iure reprehenderit impedit nemo commodi. Accusantium
+                        quas commodi minus blanditiis maxime, est cumque dignissimos sequi vitae perspiciatis nemo?
+                        Blanditiis!</p>
                 </article>
                 <article>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis veritatis repudiandae vitae ratione nam esse quidem labore impedit perspiciatis tenetur, sunt, molestias voluptatibus, dolorum eius vero repellendus alias at aspernatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, facere eveniet. Iure reprehenderit impedit nemo commodi. Accusantium quas commodi minus blanditiis maxime, est cumque dignissimos sequi vitae perspiciatis nemo? Blanditiis!</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis veritatis repudiandae vitae
+                        ratione nam esse quidem labore impedit perspiciatis tenetur, sunt, molestias voluptatibus,
+                        dolorum eius vero repellendus alias at aspernatur! Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Suscipit, facere eveniet. Iure reprehenderit impedit nemo commodi. Accusantium
+                        quas commodi minus blanditiis maxime, est cumque dignissimos sequi vitae perspiciatis nemo?
+                        Blanditiis!</p>
                 </article>
                 <article>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis veritatis repudiandae vitae ratione nam esse quidem labore impedit perspiciatis tenetur, sunt, molestias voluptatibus, dolorum eius vero repellendus alias at aspernatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, facere eveniet. Iure reprehenderit impedit nemo commodi. Accusantium quas commodi minus blanditiis maxime, est cumque dignissimos sequi vitae perspiciatis nemo? Blanditiis!</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis veritatis repudiandae vitae
+                        ratione nam esse quidem labore impedit perspiciatis tenetur, sunt, molestias voluptatibus,
+                        dolorum eius vero repellendus alias at aspernatur! Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Suscipit, facere eveniet. Iure reprehenderit impedit nemo commodi. Accusantium
+                        quas commodi minus blanditiis maxime, est cumque dignissimos sequi vitae perspiciatis nemo?
+                        Blanditiis!</p>
                 </article>
                 <article>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis veritatis repudiandae vitae ratione nam esse quidem labore impedit perspiciatis tenetur, sunt, molestias voluptatibus, dolorum eius vero repellendus alias at aspernatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, facere eveniet. Iure reprehenderit impedit nemo commodi. Accusantium quas commodi minus blanditiis maxime, est cumque dignissimos sequi vitae perspiciatis nemo? Blanditiis!</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis veritatis repudiandae vitae
+                        ratione nam esse quidem labore impedit perspiciatis tenetur, sunt, molestias voluptatibus,
+                        dolorum eius vero repellendus alias at aspernatur! Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Suscipit, facere eveniet. Iure reprehenderit impedit nemo commodi. Accusantium
+                        quas commodi minus blanditiis maxime, est cumque dignissimos sequi vitae perspiciatis nemo?
+                        Blanditiis!</p>
                 </article>
             </div>
         </section>
@@ -54,4 +98,5 @@
 
     </footer>
 </body>
+
 </html>
