--- a/app/views/home.html
+++ b/app/views/home.html
@@ -14,10 +14,10 @@
     <header>
         <nav class="navbar">
             <div class="navbar-toggler">
-                <i class="icon fas fa-bars fa-xl"></i>
+                <a href=""><i class="icon fas fa-bars fa-xl"></i></a>
             </div>
             <div class="brand">
-                <a href="/">
+                <a href="/#">
                     <img src="/images/logo.jpeg" alt="Logo" id="brand-logo">
                 </a>
             </div>
