--- a/app/views/home.html
+++ b/app/views/home.html
@@ -95,7 +95,42 @@
         </section>
     </main>
     <footer>
-
+        <nav class="footer-navbar">
+            <ul class="footer-navbar-items"><a href="#"><h3>Nosotros</h3></a>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+            </ul>
+            <ul class="footer-navbar-items"><a href="#"><h3>Ayuda</h3></a>
+                <li>Lorem</li>
+                <li>Lorem</li>
+            </ul>
+            <ul class="footer-navbar-items"><a href="#"><h3>Locales</h3></a>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+            </ul>
+            <ul class="footer-navbar-items"><a href="#"><h3>Servicios</h3></a>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+            </ul>
+        </nav>
+        <div class="footer-div-links">
+            <div id="social-media">
+                <a href=""><i class="fa-brands fa-pinterest fa-xl"></i></i></a>
+                <a href=""><i class="fa-brands fa-facebook fa-xl"></i></i></a>
+                <a href=""><i class="fa-brands fa-instagram fa-xl"></i></i></a>
+                <a href=""><i class="fa-brands fa-twitter fa-xl"></i></i></a>
+                <a href=""><i class="fa-brands fa-youtube fa-xl"></i></i></a>
+                <a href=""><i class="fa-brands fa-tiktok fa-xl"></i></i></a>
+            </div>
+            <div id="copyright">
+                <i class="fa-regular fa-copyright fa-xl"></i><span> Copyright</span>
+            </div>
+        </div>
     </footer>
 </body>
 
