--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -24,23 +24,34 @@ nav.navbar .brand #brand-logo {
 
 nav.navbar .brand {
   padding: 11.25px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 nav.navbar .navbar-toggler {
   margin-right: 46.5px;
   margin-left: 5px;
 }
-
-nav.navbar ul {
+nav.navbar .user ul{
   display: flex;
+  flex-direction: row;
   list-style-type: none;
 }
+nav.navbar .icons ul {
+  display: flex;
+  list-style-type: none;
+  flex-direction: column;
+  position: absolute;
+  left: 0;
+  top: 65px;
+  background-color: wheat;
+}
 
-nav.navbar .items {
+nav.navbar #myLinks {
   display: none;
 }
 
-nav.navbar .items li {
+nav.navbar #myLinks li {
   width: 100px;
 }
 
@@ -158,8 +169,21 @@ footer nav ul li{
   nav.navbar .navbar-toggler {
     display: none;
   }
-  nav.navbar .items {
+  nav.navbar .icons ul{
     display: flex;
+    list-style-type: none;
+    flex-direction: row;
+    position: relative;
+    top: 0;
+    background-color: white;
+  }
+  nav.navbar #myLinks {
+    display: block;
+    flex-direction: row;
+  }
+  nav.navbar .brand{
+    margin-left: 0;
+    margin-right: 0;
   }
   main{
     min-width: 768px;
