--- a/app/views/home.html
+++ b/app/views/home.html
@@ -10,12 +10,8 @@
     <script src="https://kit.fontawesome.com/fd4aeec64b.js" crossorigin="anonymous"></script>
     <script>
         function nav_toggler() {
-            var x = document.getElementById("myLinks");
-            if (x.style.display === "block") {
-                x.style.display = "none";
-            } else {
-                x.style.display = "block";
-            }
+            var navbarLinks = document.getElementById("myLinks");
+            navbarLinks.classList.toggle("active");
         }
         </script>
 </head>
