--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -143,6 +143,33 @@ footer nav ul li{
 
 /*Ënd Footer*/
 
+/*Start Login & Register form*/
+form{
+  text-align: center;
+  width: 80%;
+  margin: auto;
+}
+form input{
+  display: block;
+  width: 100%;
+  padding: 10px 12px;
+  border-radius: 5px;
+  border: #cecdcd 1px solid;
+}
+form div{
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+form button{
+  width: 100%;
+  color: #ffffff ;
+  background-color: #000000;
+  padding: 10px 12px;
+  border: none;
+}
+
+/*End Login & Register form*/
+
 
 /*Tablet*/
 @media (max-width: 768px) {
