--- a/app/views/register.html
+++ b/app/views/register.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <main>
-        <form action="register.html" method="post">
-            <div><h4>Recibir codigo de acceso por e-mail</h4></div>
+        <form action="/register" method="post">
+            <div><h4>Regsitro</h4></div>
             <div>
                 <label for="form-user-email"></label>
                 <input type="text" name="email" placeholder="Correo electronico">
