--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,300&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   color: inherit;
+  font-family: 'Libre Franklin', sans-serif;
 }
 
 /* Start Navbar styles */
