--- a/app/views/cart.html
+++ b/app/views/cart.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrito de compras</title>
+    <link href="css/styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/fd4aeec64b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <div class="cart-items">
+        <img src="" alt="">
+        <div class="product-name">Producto</div>
+        <div class="product-price"></div>
+        <div>Cantidad</div>
+        <div class="quantity-price">Precio total</div>
+    </div>
+    <div>
+        <h4>RESUMEN DE COMPRA</h4>
+        <div>Cupon de descuento</div>
+        <div>Calcular tiempos y costos de envio</div>
+        <div>Subtotal</div>
+        <div>Total</div>
+    </div>
 </body>
 </html>
