--- a/app/views/home.html
+++ b/app/views/home.html
@@ -8,19 +8,13 @@
     <title>Home Page</title>
     <link href="css/styles.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/fd4aeec64b.js" crossorigin="anonymous"></script>
-    <script>
-        function nav_toggler() {
-            var navbarLinks = document.getElementById("myLinks");
-            navbarLinks.classList.toggle("active");
-        }
-    </script>
 </head>
 
 <body>
     <header>
         <nav class="navbar">
             <div class="navbar-toggler">
-                <a href="javascript:void(0);" onclick="nav_toggler()"><i class="icon fas fa-bars fa-xl"></i></a>
+                <a><i class="icon fas fa-bars fa-xl"></i></a>
             </div>
             <div class="brand">
                 <a href="/#">
@@ -46,6 +40,7 @@
                         <a href="/login">
                             <i class="fa-solid fa-circle-user"></i>
                         </a>
+                        <span class="login">Ingresar</span>
                     </li>
                     <li>
                         <a href="/cart">
@@ -59,68 +54,117 @@
     <main>
         <div class="banner">
             <div class="banner-content">
-                <h1>Banner</h1>
+                <img src="/images/banner.webp" alt="" width="100%">
             </div>
         </div>
         <section>
-            <h1>Title</h1>
+            <h1>Ofertas</h1>
             <div class="articles">
-                <article>
+                <article class="product">
                     <a href="/products/00000001">
                         <header>
                             <img src="/images/products/HangingToiletryBag.webp" alt="" width="100%">
                         </header>
-                        <div class="product info">
-                            <div class="product title">
+                        <div class="info">
+                            <div class="category">
+                                Organizadores
+                            </div>
+                            <div class="title">
                                 Hanging Toiletry Bag
-                            </div> 
-                            <div class="product price">
-                                $75
+                            </div>
+                            <div class="price">
+                                $ 22.500
+                            </div>
+                            <div class="review">
+                                <div class="stars">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half"></i>
+                                </div>
                             </div>
                         </div>
                     </a>
                 </article>
-                <article>
+                <article class="product">
                     <a href="/products/00000002">
                         <header>
                             <img src="/images/products/Duffle70L.webp" alt="" width="100%">
                         </header>
-                        <div class="product info">
-                            <div class="product title">
+                        <div class="info">
+                            <div class="category">
+                                Bolsos
+                            </div>
+                            <div class="title">
                                 F.A.R Duffle 70L
-                            </div> 
-                            <div class="product price">
-                                $190
+                            </div>
+                            <div class="price">
+                                $ 57.000
+                            </div>
+                            <div class="review">
+                                <div class="stars">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half"></i>
+                                </div>
                             </div>
                         </div>
                     </a>
                 </article>
-                <article>
+                <article class="product">
                     <a href="/products/00000003">
                         <header>
                             <img src="/images/products/Coast.webp" alt="" width="100%">
                         </header>
-                        <div class="product info">
-                            <div class="product title">
+                        <div class="info">
+                            <div class="category">
+                                Maleta
+                            </div>
+                            <div class="title">
                                 Carry-On
-                            </div> 
-                            <div class="product price">
-                                $275
+                            </div>
+                            <div class="price">
+                                $ 82.500
+                            </div>
+                            <div class="review">
+                                <div class="stars">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half"></i>
+                                </div>
                             </div>
                         </div>
                     </a>
                 </article>
-                <article>
+                <article class="product">
                     <a href="/products/00000004">
                         <header>
                             <img src="/images/products/NeckPillow.webp" alt="" width="100%">
                         </header>
-                        <div class="product info">
-                            <div class="product title">
+                        <div class="info">
+                            <div class="category">
+                                Almohadas
+                            </div>
+                            <div class="title">
                                 Travel Neck Pillow
-                            </div> 
-                            <div class="product price">
-                                $55
+                            </div>
+                            <div class="price">
+                                $ 16.500
+                            </div>
+                            <div class="review">
+                                <div class="stars">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
                             </div>
                         </div>
                     </a>
@@ -130,31 +174,27 @@
     </main>
     <footer>
         <nav class="footer-navbar">
-            <ul class="footer-navbar-items"><a href="#">
-                    <h3>Nosotros</h3>
-                </a>
+            <ul class="footer-navbar-items">
+                <h3>Nosotros</h3>
                 <li>Lorem</li>
                 <li>Lorem</li>
                 <li>Lorem</li>
             </ul>
-            <ul class="footer-navbar-items"><a href="#">
-                    <h3>Ayuda</h3>
-                </a>
+            <ul class="footer-navbar-items">
+                <h3>Ayuda</h3>
                 <li>Lorem</li>
                 <li>Lorem</li>
             </ul>
-            <ul class="footer-navbar-items"><a href="#">
-                    <h3>Locales</h3>
-                </a>
+            <ul class="footer-navbar-items">
+                <h3>Locales</h3>
                 <li>Lorem</li>
                 <li>Lorem</li>
                 <li>Lorem</li>
                 <li>Lorem</li>
                 <li>Lorem</li>
             </ul>
-            <ul class="footer-navbar-items"><a href="#">
-                    <h3>Servicios</h3>
-                </a>
+            <ul class="footer-navbar-items">
+                <h3>Servicios</h3>
                 <li>Lorem</li>
                 <li>Lorem</li>
                 <li>Lorem</li>
@@ -162,15 +202,15 @@
         </nav>
         <div class="footer-div-links">
             <div id="social-media">
-                <a href=""><i class="fa-brands fa-pinterest fa-xl"></i></i></a>
-                <a href=""><i class="fa-brands fa-facebook fa-xl"></i></i></a>
-                <a href=""><i class="fa-brands fa-instagram fa-xl"></i></i></a>
-                <a href=""><i class="fa-brands fa-twitter fa-xl"></i></i></a>
-                <a href=""><i class="fa-brands fa-youtube fa-xl"></i></i></a>
-                <a href=""><i class="fa-brands fa-tiktok fa-xl"></i></i></a>
+                <a href=""><i class="fa-brands fa-pinterest"></i></i></a>
+                <a href=""><i class="fa-brands fa-facebook"></i></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></i></a>
+                <a href=""><i class="fa-brands fa-twitter"></i></i></a>
+                <a href=""><i class="fa-brands fa-youtube"></i></i></a>
+                <a href=""><i class="fa-brands fa-tiktok"></i></i></a>
             </div>
             <div id="copyright">
-                <i class="fa-regular fa-copyright fa-xl"></i><span> Copyright</span>
+                <span>© 2022 FlyFeet</span>
             </div>
         </div>
     </footer>
