Carrito de compras

--- a/app/views/cart.html
+++ b/app/views/cart.html
@@ -9,19 +9,33 @@
     <script src="https://kit.fontawesome.com/fd4aeec64b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="cart-items">
-        <img src="" alt="">
-        <div class="product-name">Producto</div>
-        <div class="product-price"></div>
-        <div>Cantidad</div>
-        <div class="quantity-price">Precio total</div>
-    </div>
-    <div>
-        <h4>RESUMEN DE COMPRA</h4>
-        <div>Cupon de descuento</div>
-        <div>Calcular tiempos y costos de envio</div>
-        <div>Subtotal</div>
-        <div>Total</div>
-    </div>
+    <main>
+        <div class="cart-items">
+            <div class="product">
+                <div class="product-unit">
+                    <img src="/images/products/Coast.webp" alt="00000003" width="80">
+                    <div class="product-description">
+                        <div class="product-name">Carry-On</div>
+                        <div class="product-price">$275</div>
+                    </div>
+                </div>
+                <div class="product-subtotal">
+                    <div class="quantity">
+                        <button>-</button>
+                        <div>1</div>
+                        <button>+</button>
+                    </div>
+                    <div class="subtotal-price">$275</div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <h4>RESUMEN DE COMPRA</h4>
+            <div>Cupon de descuento</div>
+            <div>Calcular tiempos y costos de envio</div>
+            <div>Subtotal</div>
+            <div>Total</div>
+        </div>
+    </main>
 </body>
 </html>
