--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -175,7 +175,36 @@ form button{
 /*Start Cart*/
 .cart-items{
   display: flex;
-  padding: 0 10px;
+  margin: 10px;
+  padding: 10px;
+  border: #000000 1px solid;
+}
+.product-description{
+  margin-right: auto;
+  width: 100%;
+}
+.product-price{
+  font-weight: bold;
+}
+.quantity{
+  display: flex;
+  margin-left: 90px;
+}
+.quantity-price{
+  display: flex;
+}
+.product{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.product-unit{
+  display: flex;
+  width: 100%;
+}
+.product-subtotal{
+  display: flex;
+  justify-content: space-between;
 }
 /*End Cart*/
 
