--- a/app/views/register.html
+++ b/app/views/register.html
@@ -9,6 +9,46 @@
     <script src="https://kit.fontawesome.com/fd4aeec64b.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+            <div class="navbar-toggler">
+                <a><i class="icon fas fa-bars fa-xl"></i></a>
+            </div>
+            <div class="brand">
+                <a href="/#">
+                    <img src="/images/logo.jpeg" alt="Logo" id="brand-logo">
+                </a>
+            </div>
+            <div id="myLinks" class="icons">
+                <ul>
+                    <li>
+                        <a href="/#">Categorias</a>
+                    </li>
+                    <li>
+                        <a href="/#">Nuevo</a>
+                    </li>
+                    <li>
+                        <a href="/#">Ofertas</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="user">
+                <ul>
+                    <li>
+                        <a href="/login">
+                            <i class="fa-solid fa-circle-user"></i>
+                        <span class="login">Ingresar</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/cart">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <main>
         <form action="/register" method="post">
             <div><h4>Regsitro</h4></div>
@@ -32,5 +72,47 @@
             </div>
         </form>
     </main>
+    <footer>
+        <nav class="footer-navbar">
+            <ul class="footer-navbar-items">
+                <h3>Nosotros</h3>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+            </ul>
+            <ul class="footer-navbar-items">
+                <h3>Ayuda</h3>
+                <li>Lorem</li>
+                <li>Lorem</li>
+            </ul>
+            <ul class="footer-navbar-items">
+                <h3>Locales</h3>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+            </ul>
+            <ul class="footer-navbar-items">
+                <h3>Servicios</h3>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+            </ul>
+        </nav>
+        <div class="footer-div-links">
+            <div id="social-media">
+                <a href=""><i class="fa-brands fa-pinterest"></i></i></a>
+                <a href=""><i class="fa-brands fa-facebook"></i></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></i></a>
+                <a href=""><i class="fa-brands fa-twitter"></i></i></a>
+                <a href=""><i class="fa-brands fa-youtube"></i></i></a>
+                <a href=""><i class="fa-brands fa-tiktok"></i></i></a>
+            </div>
+            <div id="copyright">
+                <span>© 2022 FlyFeet</span>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
