--- a/app/views/home.html
+++ b/app/views/home.html
@@ -143,7 +143,7 @@
                     </a>
                 </article>
                 <article class="product">
-                    <a href="/products/00000004">
+                    <a href="/product">
                         <header>
                             <img src="/images/products/NeckPillow.webp" alt="" width="100%">
                         </header>
