--- a/app/views/register.html
+++ b/app/views/register.html
@@ -51,7 +51,7 @@
     </header>
     <main>
         <form action="/register" method="post">
-            <div><h4>Regsitro</h4></div>
+            <div><h4>Registro</h4></div>
             <div>
                 <label for="form-user-email"></label>
                 <input type="text" name="email" placeholder="Correo electronico">
