--- a/app/views/product.html
+++ b/app/views/product.html
@@ -5,8 +5,121 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalle de producto</title>
+    <link href="css/styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/fd4aeec64b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar">
+            <div class="navbar-toggler">
+                <a><i class="icon fas fa-bars fa-xl"></i></a>
+            </div>
+            <div class="brand">
+                <a href="/#">
+                    <img src="/images/logo.jpeg" alt="Logo" id="brand-logo">
+                </a>
+            </div>
+            <div id="myLinks" class="icons">
+                <ul>
+                    <li>
+                        <a href="/#">Categorias</a>
+                    </li>
+                    <li>
+                        <a href="/#">Nuevo</a>
+                    </li>
+                    <li>
+                        <a href="/#">Ofertas</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="user">
+                <ul>
+                    <li>
+                        <a href="/login">
+                            <i class="fa-solid fa-circle-user"></i>
+                        <span class="login">Ingresar</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/cart">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div>
+            <span>Volver</span>
+            <span>Productos</span>
+        </div>
+        <div>
+            <img src="/images/products/neckpillow.webp">
+        </div>
+        <div>
+            <span>TRAVEL NECK PILLOW</span>
+        </div>
+        <div>
+            $16.500
+        </div>
+        <div>
+            <select>
+                <option value>Elige una opción</option>
+                <option value="Amarillo"></option>
+                <option value="Azul"></option>
+                <option value="Roja"></option>
+                <option value="Rosa"></option>
+            </select>
+        </div>
+        <div>
+            <p>Detalles del producto</p>
+        </div>
+        <div>
+            <p>poner detalles</p>
+        </div>
+    </main>
+    <footer>
+        <nav class="footer-navbar">
+            <ul class="footer-navbar-items">
+                <h3>Nosotros</h3>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+            </ul>
+            <ul class="footer-navbar-items">
+                <h3>Ayuda</h3>
+                <li>Lorem</li>
+                <li>Lorem</li>
+            </ul>
+            <ul class="footer-navbar-items">
+                <h3>Locales</h3>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+            </ul>
+            <ul class="footer-navbar-items">
+                <h3>Servicios</h3>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+            </ul>
+        </nav>
+        <div class="footer-div-links">
+            <div id="social-media">
+                <a href=""><i class="fa-brands fa-pinterest"></i></i></a>
+                <a href=""><i class="fa-brands fa-facebook"></i></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></i></a>
+                <a href=""><i class="fa-brands fa-twitter"></i></i></a>
+                <a href=""><i class="fa-brands fa-youtube"></i></i></a>
+                <a href=""><i class="fa-brands fa-tiktok"></i></i></a>
+            </div>
+            <div id="copyright">
+                <span>© 2022 FlyFeet</span>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
