--- a/app/views/home.html
+++ b/app/views/home.html
@@ -61,7 +61,7 @@
             <h1>Ofertas</h1>
             <div class="articles">
                 <article class="product">
-                    <a href="/products/00000001">
+                    <a href="/product">
                         <header>
                             <img src="/images/products/HangingToiletryBag.webp" alt="" width="100%">
                         </header>
@@ -89,7 +89,7 @@
                     </a>
                 </article>
                 <article class="product">
-                    <a href="/products/00000002">
+                    <a href="/product">
                         <header>
                             <img src="/images/products/Duffle70L.webp" alt="" width="100%">
                         </header>
@@ -116,7 +116,7 @@
                     </a>
                 </article>
                 <article class="product">
-                    <a href="/products/00000003">
+                    <a href="/product">
                         <header>
                             <img src="/images/products/Coast.webp" alt="" width="100%">
                         </header>
@@ -143,7 +143,7 @@
                     </a>
                 </article>
                 <article class="product">
-                    <a href="/products/00000004">
+                    <a href="/product">
                         <header>
                             <img src="/images/products/NeckPillow.webp" alt="" width="100%">
                         </header>
