--- a/app/views/cart.html
+++ b/app/views/cart.html
@@ -81,28 +81,27 @@
         <nav class="footer-navbar">
             <ul class="footer-navbar-items">
                 <h3>Nosotros</h3>
-                <li>Lorem</li>
-                <li>Lorem</li>
-                <li>Lorem</li>
+                <li>Quiénes somos</li>
+                <li>Contacto</li>
+                <li>Sumate con nosotros</li>
             </ul>
             <ul class="footer-navbar-items">
                 <h3>Ayuda</h3>
-                <li>Lorem</li>
-                <li>Lorem</li>
+                <li>Preguntas frecuentes</li>
+                <li>Dejá tu consulta</li>
             </ul>
             <ul class="footer-navbar-items">
                 <h3>Locales</h3>
-                <li>Lorem</li>
-                <li>Lorem</li>
-                <li>Lorem</li>
-                <li>Lorem</li>
-                <li>Lorem</li>
+                <li>Santa Fe</li>
+                <li>Buenos Aires</li>
+                <li>Corrientes</li>
+                <li>Córdoba</li>
+                <li>Río Negro</li>
             </ul>
             <ul class="footer-navbar-items">
                 <h3>Servicios</h3>
-                <li>Lorem</li>
-                <li>Lorem</li>
-                <li>Lorem</li>
+                <li>Empresas</li>
+                <li>Mayoristas</li>
             </ul>
         </nav>
         <div class="footer-div-links">
