--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -14,7 +14,7 @@ nav.navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: white;
+  background-color: #C3E991;
 }
 
 nav.navbar .brand {
@@ -38,7 +38,7 @@ nav.navbar #myLinks ul {
   position: absolute;
   left: 0;
   top: 65px;
-  background-color: wheat;
+  background-color: #C3E991;
 }
 
 nav.navbar #myLinks li {
@@ -236,6 +236,47 @@ form button{
 }
 /*End Cart*/
 
+/*Product*/
+.imagenproducto {
+  width: 100%;
+}
+
+.main {
+  margin: 40px;
+}
+
+.spans {
+  display: flex;
+  justify-content: space-between;
+}
+
+.titulo {
+  margin: 3px;
+  margin-top: 10px;
+  font-weight: bold;
+  font-size: x-large;
+}
+
+.precio {
+  margin: 3px;
+  font-size: larger;
+}
+
+.opciones {
+  margin: 10px;
+}
+
+.detalles {
+  margin: 3px;
+  text-decoration: underline;
+  font-size: larger;
+}
+
+.detalles2 {
+  margin: 3px;
+}
+
+
 
 /*Tablet*/
 @media (max-width: 768px) {
@@ -285,7 +326,7 @@ form button{
     flex-direction: row;
     position: relative;
     top: 0;
-    background-color: white;
+    background-color: #C3E991;
   }
   nav.navbar #myLinks {
     display: block;
