--- a/app/views/product.html
+++ b/app/views/product.html
@@ -50,61 +50,62 @@
         </nav>
     </header>
     <main>
-        <div>
-            <span>Volver</span>
+        <div class="spans">
+            <span><i class="fa-solid fa-backward"></i>Volver</span>
             <span>Productos</span>
         </div>
-        <div>
-            <img src="/images/products/neckpillow.webp">
+        <div class="main">
+        <div class="imagenproducto">
+            <img src="/images/products/neckpillow.webp" width="100%">
         </div>
-        <div>
+        <div class="titulo">
             <span>TRAVEL NECK PILLOW</span>
         </div>
-        <div>
+        <div class="precio">
             $16.500
         </div>
-        <div>
+        <div class="opciones">
             <select>
                 <option value>Elige una opción</option>
-                <option value="Amarillo"></option>
-                <option value="Azul"></option>
-                <option value="Roja"></option>
-                <option value="Rosa"></option>
+                <option value="Amarillo">Amarillo</option>
+                <option value="Azul">Azul</option>
+                <option value="Roja">Roja</option>
+                <option value="Rosa">Rosa</option>
             </select>
         </div>
-        <div>
+        <div class="detalles">
             <p>Detalles del producto</p>
         </div>
-        <div>
-            <p>poner detalles</p>
+        <div class="detalles2">
+            <p>Diseñada para ofrecer la máxima comodidad y versatilidad, la almohada para el cuello de viaje tiene un interior hecho con un núcleo de almohada de espuma y un acolchado acolchado. Es fácilmente ajustable e incluye una cuerda principal que recorre todo el interior y cuerdas elásticas en ambos lados para un ajuste de altura ideal. También se puede conectar a The Travel Blanket a través de botones a presión.</p>
+        </div>
         </div>
     </main>
     <footer>
         <nav class="footer-navbar">
             <ul class="footer-navbar-items">
                 <h3>Nosotros</h3>
-                <li>Lorem</li>
-                <li>Lorem</li>
-                <li>Lorem</li>
+                <li>Quiénes somos</li>
+                <li>Contacto</li>
+                <li>Sumate con nosotros</li>
             </ul>
             <ul class="footer-navbar-items">
                 <h3>Ayuda</h3>
-                <li>Lorem</li>
-                <li>Lorem</li>
+                <li>Preguntas frecuentes</li>
+                <li>Dejá tu consulta</li>
             </ul>
             <ul class="footer-navbar-items">
                 <h3>Locales</h3>
-                <li>Lorem</li>
-                <li>Lorem</li>
-                <li>Lorem</li>
-                <li>Lorem</li>
-                <li>Lorem</li>
+                <li>Santa Fe</li>
+                <li>Buenos Aires</li>
+                <li>Corrientes</li>
+                <li>Córdoba</li>
+                <li>Río Negro</li>
             </ul>
             <ul class="footer-navbar-items">
                 <h3>Servicios</h3>
-                <li>Lorem</li>
-                <li>Lorem</li>
-                <li>Lorem</li>
+                <li>Empresas</li>
+                <li>Mayoristas</li>
             </ul>
         </nav>
         <div class="footer-div-links">
