--- a/app/views/cart.html
+++ b/app/views/cart.html
@@ -50,6 +50,7 @@
         </nav>
     </header>
     <main>
+    <div class="contenidoCarrito">
         <div class="cart-items">
             <div class="product">
                 <div class="product-unit">
@@ -69,15 +70,36 @@
                 </div>
             </div>
         </div>
-        <div>
-            <h4>RESUMEN DE COMPRA</h4>
-            <div>Cupon de descuento</div>
-            <div>Calcular tiempos y costos de envio</div>
-            <div>Subtotal</div>
-            <div>Total</div>
+        <div class="agregarProducto">
+            
+            <i class="fa-solid fa-circle-plus"><input type="submit" value="Agregar Producto/s"></i>
+            <div class="vaciar">
+                <input type="submit" value="Vaciar Carrito">
+                <i class="fa-solid fa-trash-can"></i>
+            </div>
         </div>
+        <br>
+        <div class="compraInfo">
+            <h4>RESUMEN DE COMPRA:</h4>
+            <br>
+            <div>Cupon de descuento</div>
+            <br>
+            <div>Calcular tiempos y costos de envio</div>
+            <br>
+            <div>Subtotal:</div>
+            <br>
+            <div>Total:</div>
+            <br>
+            <div class="botonCompra">
+            <i class="fa-solid fa-cart-shopping"></i>
+            <input type="submit" value="INICIAR COMPRA" style="font-size: larger" class="botonCart">
+            </i>
+            </div>
+        </div>
+    </div>
     </main>
     <footer>
+        <div class="footer">
         <nav class="footer-navbar">
             <ul class="footer-navbar-items">
                 <h3>Nosotros</h3>
@@ -118,6 +140,7 @@
                 <span>© 2022 FlyFeet</span>
             </div>
         </div>
+    </div>
     </footer>
 </body>
 </html>
