--- a/app/views/home.html
+++ b/app/views/home.html
@@ -18,7 +18,7 @@
             </div>
             <div class="brand">
                 <a href="/#">
-                    <img src="/images/logo.jpeg" alt="Logo" id="brand-logo">
+                    <img src="/images/logo.png" alt="Logo" id="brand-logo">
                 </a>
             </div>
             <div id="myLinks" class="icons">
