--- a/app/views/cart.html
+++ b/app/views/cart.html
@@ -51,6 +51,7 @@
     </header>
     <main>
     <div class="contenidoCarrito">
+        <a class="nombreCart">Carrito de compras:</a>
         <div class="cart-items">
             <div class="product">
                 <div class="product-unit">
