--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -389,10 +389,10 @@ form button{
   background: #6cf;
 }
 
-.contenidoCarrito{
+/* .contenidoCarrito{
   position: relative;
   top: 99px;
-}
+} */
 
 .botonCompra{
   text-align: center;
@@ -413,10 +413,10 @@ form button{
   justify-content: space-evenly;
 }
 
-.compraInfo{
+/* .compraInfo{
   position: relative;
   top: 100px;
-}
+} */
 
 .nombreCart{
   text-decoration: underline;
